# QuantDevProject

./: .cache.sqlite  .gitignore  README.md  pyproject.toml
src/data/: eia_code_info.csv  eia_data.csv  input_dataset.csv  weather_data.csv
src/data/cache/: sentiments.pickle
src/data/cache/alphavantage/: fetch_data.pickle
src/data/cache/eia/: fetch_data.pickle
src/data/cache/meteo/: fetch_data.pickle
src/data/cache/yfinance/: fetch_data.pickle
src/data/elec_spot_price_history/: PJM-DailyAvg.RealTime.csv
src/data_pipeline/: cache_system.py  data_pipeline.py  ml_prediction.py  models.py  trading_strategy.py  utils.py
src/logging/: wfcv_log_LinearRegression.txt  wfcv_log_RandomForest.txt
src/results/: linear_regression_IS_preds.xlsx  linearregression_model_results.xlsx  model_out_of_sample_errors.csv  model_results.pkl  model_results_linearRegression.xlsx  preds_df.csv  randomforest_model_results.xlsx
src/test/: errors_df.csv  model_preds_df.csv
src/visualization/: app.py
