[tool.poetry]
name = "quantdevproject"
version = "0.1.0"
description = "A library for quantiative forecasting and trading"
authors = ["John Farrell <johndfarrell@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
pandas = "^2.2.3"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
psycopg2 = "^2.9.9"
yfinance = "^0.2.44"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
